@@ -1,4 +1,3 @@
-Tests finished. 48 tests of 48 passed.
-Compiled as DEBUG
-Test suite pass at GMT Thu Jan 07 16:30:11 2010
+Tests finished. 36 tests of 36 passed.
+Test suite pass at GMT Tue Dec 29 19:51:18 2009
 
